samples/_failures_safe/1761211251_804ca5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_64d18e9c.c: In function ‘print_statistics’:
./samples/SAFE/__tmp_64d18e9c.c:131:64: error: expected ‘)’ at end of input
  131 |                level_to_string(i), stats->counts[i], percentage
      |                                                                ^
      |                                                                )
./samples/SAFE/__tmp_64d18e9c.c:130:15: note: to match this ‘(’
  130 |         printf("%-6s: %d (%.1f%%)\n",
      |               ^
./samples/SAFE/__tmp_64d18e9c.c:131:16: error: expected declaration or statement at end of input
  131 |                level_to_string(i), stats->counts[i], percentage
      |                ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_64d18e9c.c:131:16: error: expected declaration or statement at end of input
